- Sincronización de get e insert en RepositoryManager - DateTime equals mejorado